Fixed documentation semantic and sintax errors

--- a/docs/components/doc-sections/en/bindings.html
+++ b/docs/components/doc-sections/en/bindings.html
@@ -60,11 +60,11 @@
     </div>
 
     <h3> <a id="bind_two_way"> Two Way </a> </h3>
-    <p>        
+    <p>
         We can achieve Two Way Data Binding using the command <span
             class="note mark-el">e-bind:<i>attribute</i>="scopeProperty"</span>,
         by default it binds <span class="note">value</span> attribute, it means that if we want
-        to bind the property value of an input we can define like this
+        to bind the `value` attribute of an input we can define like this
         <span class="note mark-el">e-bind="scopeProperty"</span>.
     </p>
 
