--- a/docs/components/doc-sections/en/delimiters.html
+++ b/docs/components/doc-sections/en/delimiters.html
@@ -3,7 +3,7 @@
         title="Help us improve this documentation on github!" class="edit-content"><span
             class="fa fa-pencil"></span></a>
 
-    <h1> <a id="delimiters"> Delimitadores (Delimiters) </a> </h1>
+    <h1> <a id="delimiters"> Delimiters </a> </h1>
 
     <p>
         By default Easy brings two types of delimiters, which are the <span class="note">easy</span> delimiter and the
