--- a/docs/components/doc-sections/en/goodbye.html
+++ b/docs/components/doc-sections/en/goodbye.html
@@ -1,5 +1,5 @@
 <section class="section">
-    <h2> Now we know everything about <span class="mark-el">Easy.js</span> and it concepts.</h2>
+    <h2> Now you know everything about <span class="mark-el">Easy.js</span> and it concepts.</h2>
     <p class="show-case"> We hope you enjoyed it so far, we thank you very much for following
         the easy.js documentation. </p>
 
