--- a/docs/components/doc-sections/en/installation.html
+++ b/docs/components/doc-sections/en/installation.html
@@ -23,7 +23,7 @@
     <script src="js/easy.js"></script></textarea>
     </div>
 
-    <p> Or, you can use... </p>
+    <p> Or, we can use... </p>
 
     <h3> <a id="install_cdn"> CDN </a> </h3>
     <p>
