--- a/docs/components/doc-sections/en/instance.html
+++ b/docs/components/doc-sections/en/instance.html
@@ -92,7 +92,7 @@
         </li>
         <li>
             <span class="note mark-el">{ Boolean } rerenderOnArrayChange</span> &ndash; this the
-            <i class="note-mark-el">e-for</i> exclusive config that allows to rerender all the items
+            <i class="note mark-el">e-for</i> exclusive config that allows to rerender all the items
             of the array in the UI when it changes. We'll get into more details in <a
                 href="docs.html?load=sctn2#cmd_e_for" class="mark-el">e-for</a> section.
         </li>
@@ -102,7 +102,7 @@
     <p>
         As already mentioned, the data property allows you to define the data that the application will have
         when it starts, however there is a way to add data while it is already running with the
-        <span class="note">app.setData(...)</span> method. (We'll talk about that in the
+        <span class="note">app.setData(...)</span> method (We'll talk about that in the
         <a href="docs.html?load=sctn3#methods" class=" mark-el">methods</a> section).
         <br>
         Data or properties defined on <span class="note mark-el">data</span> are not normal properties, they are
