--- a/docs/components/doc-sections/en/methods.html
+++ b/docs/components/doc-sections/en/methods.html
@@ -176,7 +176,7 @@
 
     <h3><a id="method_tojsobj">toJsObj</a></h3>
     <p>
-        It allows creating a structured javascript object based on the structure of the HTML
+        It allows creating a structured javascript object, based on the structure of the HTML
         element. Object that can be sent to a server.
     </p>
 
@@ -205,7 +205,7 @@
     </p>
 
     <ul>
-        <li> <span class="note mark-el">{ String|Element } selector</span> &ndash; the selector
+        <li> <span class="note mark-el">{ String | Element } selector</span> &ndash; the selector
             of the element to be generated or the element it self. </li>
         <li> <span class="note mark-el">{ Object } options</span> &ndash; options that indicates
             attributes it needs to look and from this ones which attributes it needs to get the
@@ -286,8 +286,7 @@
 
     <div class="block-note info">
         <p>
-            We can build complex objects with using this method, simply create the structure you
-            need.
+            We can build complex objects with using this method, simply create the structure we need.
         </p>
     </div>
 
@@ -337,7 +336,7 @@
     <ul>
         <li> <span class="note mark-el">{ Object } object</span> &ndash; the object having the
             value it needs to modify.
-            <span class="note">{ background: <i class="mark-el">color</i>, wave: <i class="mark-el">color</i> }</span>
+            <span class="note">{ background: <i class="mark-el">'color'</i>, wave: <i class="mark-el">'color'</i> }</span>
         </li>
     </ul>
 
