--- a/docs/components/doc-sections/pt/bindings.html
+++ b/docs/components/doc-sections/pt/bindings.html
@@ -62,7 +62,7 @@
     <p>
         Podemos alcançar a vinculação de dados bidirecional usando o comando <span
             class="note mark-el">e-bind:<i>atributo</i>="propriedadeDoEscopo"</span>, por padrão ele vincula ao attributo
-        <span class="note">value</span>, isto significa que se quisermos vincular ao atributo `value` não podemos fazer
+        <span class="note">value</span>, isto significa que se quisermos vincular ao atributo `value` podemos fazer
         simplesmente deste jeito <span class="note mark-el">e-bind="propriedadeDoEscopo"</span>.
     </p>
 
