--- a/docs/components/doc-sections/pt/extra.html
+++ b/docs/components/doc-sections/pt/extra.html
@@ -45,12 +45,12 @@
     value = element.valueIn('id', 'id-001'); // Define o id do atributo e retorna o valor
     value = element.valueIn(); // Se usado desta forma, obtém o valor textContent
 
-    // HTMLElement.aboveMe(...) -> Obtenha o elemento acima (parent)
+    // HTMLElement.aboveMe(...) -> Obtem o elemento acima (parent)
     var parent = element.aboveMe(); // Retorna o elemento acima (parent)
     parent = element.aboveMe('.myClass'); // Retorna o primeiro elemento acima (parent) com esta classe
 
-    // Object.keys(Function(Key, Value)) -> executa o método Object.keys(object),
-    // retorna todas as chaves ... Se uma função foi passada, ela faz um loop das chaves fornecendo
+    // Object.keys(function(Key, Value)) -> executa o método Object.keys(object),
+    // retorna todas as chaves ... Se uma função for passada, ela faz um loop das chaves fornecendo
     // a chave e o valor da propriedade
 
     var keys = myObject.keys(function(key, value){
@@ -60,8 +60,8 @@
 
     <br>
 
-    <h2> Até agora sabemos quase tudo sobre <span class="mark-el">Easy.js</span> </h2>
-    <p class="show-case"> Esperamos que tenha gostado até agora. Muito obrigado por seguir a documentação do easy.js.
+    <h2> Até aqui sabemos quase tudo sobre <span class="mark-el">Easy.js</span> </h2>
+    <p class="show-case"> Esperamos que tenha gostado até aqui. Muito obrigado por seguir a documentação do easy.js.
     </p>
 
     <h3 style="text-align: center;"> Salute 🙂! </h3>
