--- a/docs/components/doc-sections/pt/installation.html
+++ b/docs/components/doc-sections/pt/installation.html
@@ -11,7 +11,7 @@
 
     <h3> <a id="install_local"> Localmente </a> </h3>
     <p>
-        Para usar localmente, precisamos baixá-lo e importá-lo.
+        Para usar localmente, precisamos baixar o ficheiro e importá-lo.
     </p>
 
     <p>
@@ -23,7 +23,7 @@
     <script src="js/easy.js"></script></textarea>
     </div>
 
-    <p> Ou, podes usar... </p>
+    <p> Ou, podemos usar... </p>
 
     <h3> <a id="install_cdn"> CDN </a> </h3>
     <p>
