--- a/docs/components/doc-sections/pt/introduction.html
+++ b/docs/components/doc-sections/pt/introduction.html
@@ -5,7 +5,7 @@
 
     <h1> <a id="intro"> Introdução (Introduction) </a> </h1>
 
-    <h3> <a id="what">  O que é Easy.js? (What is Easy.js?) </a> </h3>
+    <h3> <a id="what"> O que é Easy.js? (What is Easy.js?) </a> </h3>
     <p>
         Easy.js, forma curta de <span style="color:var(--easy-yellow)">Easy</span> and <span
             style="color:var(--easy-black)">Asyncronous Javascript</span>,
@@ -31,7 +31,7 @@
 
     <h3> <a id="scale"> Escala de Projectos </a> </h3>
     <p>
-        Uma aplicação web totalmente desenvolvido com easy.js foi testado apenas com pequenos projetos, projetos
+        Uma aplicação web totalmente desenvolvida com easy.js foi testado apenas com pequenos projetos, projetos
         maiores ainda não foram testados.
     </p>
 
@@ -41,8 +41,8 @@
             title="Learn Javascript" target="_blank" class="mark-el"
             href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript">JavaScript</a>
         e <a title="Learn CSS" target="_blank" class="mark-el"
-            href="https://developer.mozilla.org/docs/Learn/CSS/First_steps">CSS</a> (opcional). Para cada capítulo do
-        tutorial, você terá um código de exemplo associado para ajudá-lo a entender as coisas passo a passo.
+            href="https://developer.mozilla.org/docs/Learn/CSS/First_steps">CSS</a> (opcional). Para cada capítulo, você
+        terá um código de exemplo associado para ajudá-lo a entender as coisas passo a passo.
     </p>
 </section>
 <script>
