--- a/docs/components/doc-sections/pt/instance.html
+++ b/docs/components/doc-sections/pt/instance.html
@@ -6,8 +6,9 @@
     <h1> <a id="instance"> Instância (Instance) </a> </h1>
 
     <p>
-        Quando importarmos Easy, ele adicionará uma função ao objeto global (window), portanto, para começar a usá-lo,
-        precisamos criar uma nova instância da Class Easy. Este construtor espera dois parâmetros:
+        Quando importarmos o <span class="note">Easy</span>, ele adicionará uma função ao objeto global (window),
+        portanto, para começar a usá-lo, precisamos criar uma nova instância da Class Easy. Este construtor espera dois
+        parâmetros:
     </p>
 
     <div class="code-container" code-ext=".js">
@@ -66,7 +67,7 @@
     <ul>
         <li>
             <span class="note mark-el">{ Boolean } log</span> &ndash; permite que os logs
-            (informações, erros e avisos) seja mostrados. O valor padrão é <span class="note mark-el">true</span>.
+            (informações, erros e avisos) sejam mostrados. O valor padrão é <span class="note mark-el">true</span>.
         </li>
         <li>
             <span class="note mark-el">{ Boolean } deepIgnore</span> &ndash; permite ignorar todos os elementos que
@@ -82,14 +83,14 @@
         </li>
         <li>
             <span class="note mark-el">{ Object } skeleton</span> &ndash; define a cor do skeleton enquanto o elemento
-            está sendo carregado. ]E estruturado como segue: <br>
-            <span class="note mark-el"> { background: 'color', wave: 'color' } </span>
-            <br> Por padrão a cor do skeleton is cinza clara com as ondas mais claras.
+            está sendo carregado. É estruturado como segue: <br>
+            <span class="note mark-el"> { background: 'cor', wave: 'cor' } </span>
+            <br> Por padrão a cor do skeleton é cinza clara com as ondas mais claras.
         </li>
         <li>
             <span class="note mark-el">{ Boolean } rerenderOnArrayChange</span> &ndash; esta é uma configuração
             exclusiva do
-            <i class="note-mark-el">e-for</i> que permite renderizar novamente todos os itens do array quando o mesmo
+            <i class="note mark-el">e-for</i> que permite renderizar novamente todos os itens do array quando o mesmo
             sofrer uma alteração. Entraremos em mais detalhes na secção <a href="docs.html?load=sctn2#cmd_e_for"
                 class="mark-el">e-for</a>.
         </li>
@@ -99,7 +100,7 @@
     <p>
         Como já mencionado, a propriedade data permite definir os dados que a aplicação terá ao iniciar, porém existe
         uma maneira de adicionar dados enquanto ele já está em execução com o método <span class="note">
-            app.setData(...) </span>. (Falaremos sobre isso na secção <a href="docs.html?load=sctn3#methods"
+            app.setData(...) </span> (Falaremos sobre isso na secção <a href="docs.html?load=sctn3#methods"
             class=" mark-el"> métodos </a>).<br>
 
         As propriedades definidas no <span class="note mark-el">data</span> não são propriedades normais, elas são
@@ -148,9 +149,9 @@
     <ul>
         <li>
             <span class="note mark-el">{ Function } mounted</span> &ndash; este hook é chamado quando o evento
-            DOMContentLoaded é emitido (Funciona deste jeito se a propriedade <a id="prop_config"
-                class="mark-el">useDOMLoadEvent</a>
-            é true, senão, será chamada logo que instância for criada).
+            DOMContentLoaded é emitido (Funciona deste forma se a propriedade <a id="prop_config"
+                class="mark-el">useDOMLoadEvent</a> tem o valor <span class="mark-el">true</span>, senão, será chamada
+            logo que instância for criada).
         </li>
         <li>
             <span class="note mark-el">{ Function } loaded</span> &ndash; este hook é chamado depois do elemento
